Corrected gap in mobile view

--- a/client/src/components/loginPage/style.css
+++ b/client/src/components/loginPage/style.css
@@ -56,4 +56,7 @@ main {
   .password-input {
     padding-bottom: 100px;
   }
+  .login-form {
+    gap: 30px;
+  }
 }
